welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:14: error: ';' expected but 'else' found.
  	else {
        ^SlugHunting:21: error: 'while' expected but '(' found.
  }(estSurBiscuit()!=true) 
   ^SlugHunting:22: error: '(' expected but ';' found.
  prendBiscuit()
^